tests/Rules/Structure/Fixtures/valid/lang_valid_zh_hant_tw.html.twig
<!DOCTYPE html>
<html lang="zh-Hant-TW">
<head><title>Test</title></head>
<body><main><p>你好</p></main></body>
</html>
