tests/Rules/Structure/Fixtures/invalid/lang_invalid_primary_subtag.html.twig
{# 1 errors #}
<!DOCTYPE html>
<html lang="not-a-language">
<head><title>Test</title></head>
<body><main><p>Hello</p></main></body>
</html>
